# LecTura

./: .gitignore  README.md  package-lock.json  package.json  sync-version.js
.github/scripts/: generate-latest-json.cjs
.github/workflows/: release.yml
docs/: README.md  database_design.md  github_and_autoupdate.md  handover_doc.md  high_speed_playback_optimization.md
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: BookmarkCard.jsx  BookmarkModal.jsx  CommandPalette.jsx  EmojiPickerModal.jsx  FolderDeleteDialog.jsx  FolderExplorer.jsx  FolderTree.jsx  KeyboardShortcutsModal.jsx  PlayerView.jsx  PlaylistDeleteDialog.jsx  PlaylistDetail.jsx  RevisionLibrary.jsx  Sidebar.jsx  StorageManager.jsx  StudyDashboard.jsx
src/components/ui/: dialog.jsx
src/context/: ContextMenuContext.jsx
